<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/step_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_21_days"
            style="@style/CustomStepButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21_days" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1_month"
            style="@style/CustomStepButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_month" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_3_month"
            style="@style/CustomStepButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_months" />
    </LinearLayout>
</FrameLayout>